style.css
@media print {

   body * {
      display: none;
   }


  body {
     font-family: system-ui, Arial, Helvetica, sans-serif;
     font-size: large;
     margin: 0;
     text-align: center;
  }

   aside,
   aside * {
      display: block;
   }

   aside>article {
      page-break-after: always;
   }


  .border {
     border: 3px solid #34869c;
     border-radius: 11px;
  }

  .border-radius-up {
     border: 3px solid #34869c;
     border-top-left-radius:     11px;
     border-top-right-radius:    11px;
     border-bottom: 0px;
  }
  .border-radius-down{
     border: 3px solid #34869c;
     border-bottom-left-radius:  11px;
     border-bottom-right-radius: 11px;
     border-top: 0px;
  }

  .simple-border-up {
    border: 3px solid #34869c;
    border-bottom: 0px;

  }
  .simple-border {
    border: 3px solid #34869c;
  }
  
  .underline {
     border-bottom: 3px solid #34869c;
     width:80%;
  }

  .template-text {
    color:#34869c;
    text-transform: uppercase;
    font-size: 15px;
  }

  .bold {
    font-weight: bold;
  }

  /*.datos-de-usuario {*/
  /*  display:grid;*/
  /*  grid-template-columns: 20% 55% auto;*/
  /*  grid-gap: 10px;*/
  /**/
  /*  align-items: stretch;*/
  /*}*/



  .flex-container { 
    display: flex;
    justify-content: center;
    /*align-items: center;*/
  }

  .flex-container div {
    padding: 2px;
    /*border-radius: 11px;*/
  }


  .user-caserio { 
    display: flex;
    /*background-color: DodgerBlue;*/
    /*justify-content: flex-start;*/
    /*align-items: start;*/
    align-items: center;
    font-size: 21px;
  }


  .user-name { 
    display: flex;
    /*background-color: DodgerBlue;*/
    /*justify-content: flex-start;*/
    align-items: center;
    font-size: 21px;
  }

  .jaap-header-and-legend { 
    display: flex;
    justify-content: center;
    /*align-items: center;*/
    flex-direction: column;
    text-align: center;
    text-transform: uppercase;
    /*font-size: 15px;*/
  }


  .flex-container.border {
    padding: 10px;
    align-items: center;
  }

  section {
    padding: 1.0rem;
    height:50vh;
  }

  .bigger {
    font-size: 20px;
  }

}




@page {
   size: letter portrait;
   margin: 0;
}

